# sertifikatsok

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  Justfile  Pipfile  README.md  docker-compose-cache.json  docker-compose.dev.yaml  docker-compose.yaml  docker-entrypoint.sh  fly.toml  pyproject.toml
.github/: dependabot.yml
api/: Dockerfile  Pipfile  pyproject.toml  requirements.txt  run_dev.sh  sertifikatsok.py  test_sertifikatsok.py
api/certs/: CN%3DCPN+Enterprise+SHA256+CLASS+3%2C+OU%3DCommfides+Trust+Environment+%28c%29+2011+Commfides+Norge+AS%2C+O%3DCommfides+Norge+AS+-+988+312+495%2C+C%3DNO.pem  CN%3DCPN+Person+High+SHA256+CLASS+3%2C+OU%3DCommfides+Trust+Environment+%28c%29+2011+Commfides+Norge+AS%2C+O%3DCommfides+Norge+AS+-+988+312+495%2C+C%3DNO.pem  CN%3DCommfides+CPN+Enterprise-Norwegian+SHA256+CA+-+TEST%2C+OU%3DCommfides+Trust+Environment%28C%29+2014+Commfides+Norge+AS+-+TEST%2C+O%3DCommfides+Norge+AS+-+988+312+495%2C+C%3DNO.pem  CN%3DCommfides+CPN+Enterprise-Norwegian+SHA256+CA+-+TEST2%2C+OU%3DCommfides+Trust+Environment%28C%29+2014+Commfides+Norge+AS+-+TEST%2C+O%3DCommfides+Norge+AS+-+988+312+495%2C+C%3DNO.pem  CN%3DCommfides+CPN+Person-High+SHA256+CA+-+TEST%2C+OU%3DCommfides+Trust+Environment%28C%29+2014+Commfides+Norge+AS+-+TEST%2C+O%3DCommfides+Norge+AS+-+988+312+495%2C+C%3DNO.pem
api/certs/prod/: BPCl3CaG2HTBS.pem  BPCl3CaG2HTPS.pem  BPCl3CaG2STBS.pem  CommfidesLegalPersonCA-G3.crt  CommfidesNaturalPersonCA-G3.crt
api/certs/test/: BPCl3CaG2HTBS.pem  BPCl3CaG2HTPS.pem  BPCl3CaG2STBS.pem  CN%3DBuypass+Class+3+Test4+CA+1%2C+O%3DBuypass%2C+C%3DNO.pem  CommfidesLegalPersonCA-G3-TEST.crt  CommfidesNaturalPersonCA-G3-TEST.crt
api/crls/: readme.txt
api/database/: readme.txt
api/sertifikatsok/: __init__.py  __main__.py  audit_log.py  brreg_batch.py  cert.py  config.py  constants.py  crypto.py  db.py  enums.py  errors.py  ldap.py  logging.py  qcert.py  revocation_info.py  rfc4514.py  search.py  serialization.py  starlette_precompressed_static.py  static.py  utils.py  web.py
api/src/sertifikatsok/: asgi.py  brreg_batch.py  cert.py  config.py  constants.py  crypto.py  enums.py  errors.py  logging.py  qcert.py  revocation_info.py  search.py  serialization.py  utils.py  web.py
api/tests/: conftest.py  test_api.py  test_brreg_batch.py  test_brreg_batch.py.b  test_cert.py  test_config.py  test_crypto.py  test_db.py  test_ldap.py  test_qcert.py  test_revocation_info.py  test_rfc4514.py  test_search.py  test_static_resources.py  test_utils.py  testlib.py
api/tests/resources/: cert_personal_seid2_krypt.pem  cert_personal_seid2_sign.pem  cert_sha1_sign.pem  cert_with_invalid_extensions.pem  cert_with_invalid_issuer.pem  cert_with_invalid_subject.pem  (+1 more)
ruldap3/: Cargo.toml  pyproject.toml  requirements.txt  ruldap3.pyi
ruldap3/src/: lib.rs
(+90 files in other folders)
