[package]
name = "ruldap3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ruldap3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
pyo3-asyncio = { package = "pyo3-asyncio-0-21", version = "0.21.0", features = [
    "tokio-runtime",
] }
tokio = "1.40.0"
ldap3 = { version = "0.11.5", default-features = false }
