[package]
name = "ruldap3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ruldap3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.27.0", features = [
    "tokio-runtime",
] }
tokio = "1.49.0"
ldap3 = { version = "0.12.1", default-features = false }
